<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome to the AndroidThriftChat !</string>
    <string name="please_login">Please identify yourself</string>
    <string name="username">Username</string>
    <string name="password">Password</string>    
    <string name="app_name">AndroidThriftChat</string>
    <string name="login">Login</string>
    <string name="send">Send</string>

</resources>