<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/welcomeLbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textSize="18dp" 
        android:gravity="center"/>

    <TextView
        android:id="@+id/pleaseLoginLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login" 
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textSize="15dp" /> 
    
    <TextView
        android:id="@+id/loginLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/loginFld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordFld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:gravity="center_horizontal">


	    <Button
	        android:id="@+id/loginBtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login" 
	        android:gravity="center"/>
    </LinearLayout>
</LinearLayout>